--- a/PHP Basics August 2014/Lectures/01. PHP Syntax    XAMPP-LAMP-WAMP/1. PHP-Syntax-Demos/04.TakePostRequest.html
+++ b/PHP Basics August 2014/Lectures/01. PHP Syntax    XAMPP-LAMP-WAMP/1. PHP-Syntax-Demos/04.TakePostRequest.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 <body>
-<form action="TakePostRequest.php" method="post">
+<form action="05.TakePostRequest.php" method="post">
     Name: <input type="text" name="name"><br>
     E-mail: <input type="text" name="email"><br>
     <input type="submit">
